# mc-socialhive-payments

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: asgi.py  service_settings.py
src/payments/application/: messagebus.py  payments.py
src/payments/domain/: events.py  interfaces.py  models.py
src/payments/infrastructure/adapters/: repository.py  unit_of_work.py
src/payments/infrastructure/api/: urls.py  views.py
