[tool.poetry]
name = "payments"
version = "0.1.0"
description = ""
authors = ["alec <alejo1ibarra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
pydantic = "^1.8.2"
uvicorn = "^0.23.2"
redis-om = "^0.2.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
